--- a/banana/pom.xml
+++ b/banana/pom.xml
@@ -106,6 +106,11 @@
           <artifactId>junit</artifactId>
           <version>4.12</version>
       </dependency>
+      <dependency>
+          <groupId>org.freemarker</groupId>
+          <artifactId>freemarker</artifactId>
+          <version>2.3.20</version>
+      </dependency>
   </dependencies>
 
   <build>
