--- a/banana/pom.xml
+++ b/banana/pom.xml
@@ -8,7 +8,6 @@
   <artifactId>banana</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
-
   <name>banana Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
@@ -81,6 +80,11 @@
           <version>4.2.6.RELEASE</version>
       </dependency>
       <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>easyexcel</artifactId>
+          <version>2.2.6</version>
+      </dependency>
+      <dependency>
           <groupId>com.github.stefanbirkner</groupId>
           <artifactId>system-rules</artifactId>
           <version>1.16.1</version>
@@ -107,42 +111,38 @@
           <artifactId>junit</artifactId>
           <version>4.12</version>
       </dependency>
+      <dependency>
+          <groupId>org.freemarker</groupId>
+          <artifactId>freemarker</artifactId>
+          <version>2.3.20</version>
+      </dependency>
   </dependencies>
 
   <build>
     <finalName>banana</finalName>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+      <sourceDirectory>src/main/java</sourceDirectory>
+      <outputDirectory>target/WEB-INF/classes</outputDirectory>
       <plugins>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>3.2.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
+       <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-war-plugin</artifactId>
+           <version>2.1.1</version>
+           <configuration>
+               <webResources>
+                   <resource>
+                       <directory>src/main/resource</directory>
+                   </resource>
+               </webResources>
+           </configuration>
+       </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>8</source>
+                  <target>8</target>
+              </configuration>
+          </plugin>
       </plugins>
-    </pluginManagement>
   </build>
 </project>
